test-suite/tests/runtime/errors/unhandled_exception.ts
export default function(_myco: Myco) {
    console.log("Testing unhandled exception");
    throw new Error("This is an unhandled exception");
} 